Fixed invisible text when background color was used as text color (e.g. micro editor)

--- a/FluentTerminal.Client/src/style.css
+++ b/FluentTerminal.Client/src/style.css
@@ -12,6 +12,10 @@ html, body {
     height: 100%;
 }
 
+.xterm .xterm-viewport {
+    background-color: transparent !important;
+}
+
 .terminal {
     background: transparent !important;
     padding:  12px;
